# symdiff

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: badges.yml  ci.yml
symdiff/: cli.py  core.py  expressions.py  main.py  parser.py
tests/: test_parser.py  test_poly_diff.py  test_symdiff.py
